gccida/c0/lookup_filename
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12243:60: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.last_lookup_index && !strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                           ^~~~~~~~~~~~
                                                           file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12243:79: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.last_lookup_index && !strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                                              ^~~~~~~~~~~~
                                                                              file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12243:6: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.last_lookup_index && !strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
     ^~~~~~~~~~~~
     file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12244:8: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
return file_table_0.last_lookup_index; 
       ^~~~~~~~~~~~
       file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12245:18: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
for ( i = 1; i < file_table_0.in_use; ++i ) 
                 ^~~~~~~~~~~~
                 file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12247:26: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !strcmp( file_name, file_table_0.table[i]) ) 
                         ^~~~~~~~~~~~
                         file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12249:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = i; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12253:11: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( i == file_table_0.allocated ) 
          ^~~~~~~~~~~~
          file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12255:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.allocated = i + 64; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12256:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xrealloc( file_table_0.table, 8LL * ( i + 64)); 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12256:42: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xrealloc( file_table_0.table, 8LL * ( i + 64)); 
                                         ^~~~~~~~~~~~
                                         file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12258:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table[i] = xstrdup( file_name); 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12259:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.in_use = i + 1; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:12260:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = i; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_filename/src/obj/dwarf2out.o] Error 1
